* WePay: Remove null address fields from request [davidsantoso]
* Remove support for Ruby 2.0 [jasonwebster]
* CardStream: Add dynamic descriptor option fields [curiousepic]
* Wirecard: Send customer data in requests [davidsantoso]
* Worldpay: Add session id attribute [shasum]
* WePay: Build fee structure correctly [curiousepic]
* Worldpay: Do not default address when not provided [shasum]

== Version 1.62.0 (December 5, 2016)
* AuthorizeNet: Map to standard AVSResult codes [shasum]
* CitrusPay: Add 3DSecureId field [davidsantoso]
* CyberSource: Only get alpha2 country code when it's a known country [bruno] #2238
* Fat Zebra: Add scrubbing to Fat Zebra gateway [bruno] #2037
* Monei: Add US and CA as new supported countries [davidgf] #2209
* NAB Transact: Add scrubbing to NAB Transact [bruno] #2038
* iATS: Add scrubbing support to iATS [bruno] #2228
* Stripe: Ensure ECI values for tokenized cards are padded [jasonwebster] #2250
* Forte: Fix incorrect authorization_code response mapping [davidsantoso]
* maxiPago: Send currency with request [curiousepic]
* Credorax: Map order_id to field H9 [curiousepic]
* Authorize.net: Remove duplicate country GB [shasum]
* PayU Latam: Add processWithoutCvv2 field [shasum]
* Fat Zebra: De-nest soft descriptor fields [curiousepic]
* Credorax: Only pass c5 field for billing address1 [davidsantoso]
* Orbital: Add support for CLP currency [curiousepic]
* Authorize.net: Add line item fields and additional transaction settings [shasum]
* Authorize.net: Pass through `header_email_receipt` [shasum]
* Stripe: Scrub additional network tokenization related sensitive data [jasonwebster] #2251
* Applying: Worldpay: Format non-fractional currency amounts correctly [jasonwebster] #2267

== Version 1.61.0 (November 7, 2016)
* Add codes AQ, BQ, SX, and SS to list of countries and update SD numeric code [zxlin]
* AuthorizeNet: Update supported countries list [shasum]
* Barclay SmartPay: Add support for credit [shasum]