@@ -15,6 +15,7 @@
 * Worldpay: Add session id attribute [shasum]
 * WePay: Build fee structure correctly [curiousepic]
 * Worldpay: Do not default address when not provided [shasum]
+* Element: Add AVS and CVV codes to response [shasum]
 
 == Version 1.62.0 (December 5, 2016)
 * AuthorizeNet: Map to standard AVSResult codes [shasum]
